update user role
